fix: private portfolio overflows

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -410,6 +410,7 @@ blockquote .small {
 
 .alert {
   border-radius: 0px;
+  overflow-wrap: break-word;
 }
 
 /* gatsby 404 */
